--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <!-- font-awesome -->
 </head>
 <div class="row">
-
+    
     <div class="col-md-3" id="left">
-        
-<div> <i class="fab fa-twitter fa-lg"></i> </div>
-<div> <i class="fas fa-home fa-lg"> Home</i> </div>
+        <div style="font-size: 37px;" > <i class="fab fa-twitter fa-lg  "></i> </div>
+
+<div> <i class="fas fa-home fa-lg"  >  Home   </i> </div>
 <div> <i class="fas fa-hashtag fa-lg"></i> Explorer </div>
 <div> <i class="fas fa-bell fa-lg"></i> Notification</div>
 <div> <i class="far fa-envelope fa-lg"></i>  Messages </div>
@@ -32,10 +32,13 @@
 <div class="btn btn-primary btn-lg"> Tweet </div>
 
 <div style="display: flex; flex-direction: row; flex-grow: 1; ">
-<div   >  <img src="./berlin.jpg" width="60px" alt="" style="border-radius: 50%;"> </div>
-<div>  <h5>Ahmad Hassan</h5> <p>@ahmad</p></div>
-</div>
+    <div   >  <img src="./berlin.jpg" width="60px" alt="" style="border-radius: 50%;"> </div>
+    <div>  <h5>Ahmad Hassan</h5> <p>@ahmad</p></div>
 
+
+
+
+    </div>
 
 </div>
 
@@ -51,11 +54,18 @@
     <img src="./berlin.jpg" width="60px" alt="" style="border-radius: 50%;">
     <input type="text" placeholder="What's Happening" name="" id="" class="input"  >
 </div>
+<div style="display: flex; flex-direction: row;" id="emoji">
+<div>  <i class="fas fa-image"></i> </div>
+<div> <i class="fas fa-gift"></i> </div>
+<div> <i class="fas fa-poll-h"></i></div>
+<div> <i class="fas fa-smile-beam"></i> </div>
+<div><i class="far fa-calendar-alt"></i></div>
 
-
-
-
-
+<div style="margin-left: 90px; opacity: 50%; " class="btn btn-primary">
+    Tweet
+</div>
+</div>
+<hr style="width: 400px;">
 
 
 
