--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
 </div>
-
+<!-- center// -->
 
 <div class="col col-md-5">
     <div style="display:flex; flex-directio:row">
@@ -66,10 +66,18 @@
 </div>
 </div>
 <hr style="width: 400px;">
+<div style="display: flex;flex-direction: row; ">
+<div> <img src="./icss.jpg" width="50px" style="border-radius: 50px;" alt=""></div>
+<div style="font-family: sans-serif ; margin-left: 20px; " > <h5 style="margin-bottom: 2px;">ICC</h5> 2hr ago</div>
+</div>
+
+
+<div> <img src="./world.jfif" width="400px" alt=""> </div>
 
 
 
 </div>
+<!-- center// -->
 
 <div class="col col-md-4"></div>
 
