--- a/index.html
+++ b/index.html
@@ -79,10 +79,59 @@
 </div>
 <!-- center// -->
 
-<div class="col col-md-4"></div>
+<!-- right -->
+
+<div class="col col-md-4">
+
+    <div>
+        <i class="fa fa-search" style="font-size:20px; position: absolute  ; right: 150px ; margin-top: 25px;"  ></i>
+    <input class="top"  type="text " placeholder="search twitter" name="" id="">
+</div>
 
 
 
+<div class="end">
+
+
+
+<div id="right">
+    <h4>Trend For You</h4>
+</div>
+
+<div style="line-height: 4px; margin-top: 50px;">
+    <p>Trending in Pakistan</p>
+    <b>Pakistan in December</b>
+</div>
+<div style="line-height: 4px; margin-top: 50px;">
+    <p>Cricket Trending</p>
+    <b>#WellpaidIndia</b>
+</div>
+<div style="line-height: 4px; margin-top: 50px;">
+    <p>politics Trending</p>
+    <b>Imran khan</b>
+</div>
+<div style="line-height: 4px; margin-top: 50px;">
+    <p>Entertainment</p>
+    <b>#BoycottBollywood</b>
+</div>
+<div style="line-height: 4px; margin-top: 50px;">
+    <p>Technology</p>
+    <b>#Meta</b>
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+</div>
+
+
+<!-- right// -->
 
 </div>
 
