--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
 <div id="right">
-    <h4>Trend For You</h4>
+    <h4>Trends For You</h4>
 </div>
 
 <div id="item" style="line-height: 4px; margin-top: 50px;">
@@ -111,12 +111,12 @@
     <p>politics Trending</p>
     <b>Imran khan</b>
 </div>
-<div id="item"  style="line-height: 4px; margin-top: 50px;">
+<div id="old"  style="line-height: 4px; margin-top: 50px;">
     <div  style="line-height: 4px; margin-top: 50px;">
     <p>Entertainment</p>
     <b>#BoycottBollywood</b>
 </div>
-<div id="item"  style="line-height: 4px; margin-top: 50px;">
+<div id="old"  style="line-height: 4px; margin-top: 50px;">
     <div  style="line-height: 4px; margin-top: 50px;">
     <p>Technology</p>
     <b>#Meta</b>
