--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 <div class="col col-md-4">
 
-    <div>
+    <div class="group">
         <i class="fa fa-search" style="font-size:20px; position: absolute  ; right: 150px ; margin-top: 25px;"  ></i>
     <input class="top"  type="text " placeholder="search twitter" name="" id="">
 </div>
@@ -97,6 +97,7 @@
 <div id="right">
     <h4>Trends For You</h4>
 </div>
+<hr width="430px">
 
 <div id="item" style="line-height: 4px; margin-top: 50px;">
     <p>Trending in Pakistan</p>
