--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <div class="row">
     
-    <div class="col-md-3" id="left">
+    <div class="col-md-3 col-sm-6" id="left">
         <div style="font-size: 37px;" > <i class="fab fa-twitter fa-lg  "></i> </div>
 
 <div> <i class="fas fa-home fa-lg"  >  Home   </i> </div>
@@ -43,7 +43,7 @@
 </div>
 <!-- center// -->
 
-<div class="col col-md-5">
+<div class="col col-md-5 col-sm-6">
     <div style="display:flex; flex-directio:row">
 <div class="mt-3" ><h4>Home</h4>  </div>
 <div class="mt-3 " id="filter" style="margin-left: 300px;">   <i class="fas fa-filter"></i>  </div>
@@ -81,10 +81,10 @@
 
 <!-- right -->
 
-<div class="col col-md-4">
+<div class="col col-md-4 col-sm-6">
 
     <div class="group">
-        <i class="fa fa-search" style="font-size:20px; position: absolute  ; right: 150px ; margin-top: 25px;"  ></i>
+        <i class="fa fa-search" style="font-size:20px; position: absolute  ; right: 100px ; margin-top: 25px;"  ></i>
     <input class="top"  type="text " placeholder="search twitter" name="" id="">
 </div>
 
@@ -97,7 +97,7 @@
 <div id="right">
     <h4>Trends For You</h4>
 </div>
-<hr width="430px">
+<hr width="390px">
 
 <div id="item" style="line-height: 4px; margin-top: 50px;">
     <p>Trending in Pakistan</p>
