--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
     <p>Trending in Pakistan</p>
     <b>Pakistan in December</b>
 </div>
+
+<div id="item" style="line-height: 4px; margin-top: 50px;">
+    <p>Tech News</p>
+    <b>#instagramdown</b>
+</div>
+
 <div id="item"  style="line-height: 4px; margin-top: 50px;">
     <p>Cricket Trending</p>
     <b>#WellpaidIndia</b>
