--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="row">
     
     <div class="col-md-3 col-sm-6" id="left">
-        <div style="font-size: 37px;" > <i class="fab fa-twitter fa-lg  "></i> </div>
+        <span style="font-size: 37px; margin-left: 10px;" > <i class="fab fa-twitter fa-lg  "></i> </span>
 
 <div> <i class="fas fa-home fa-lg"  >  Home   </i> </div>
 <div> <i class="fas fa-hashtag fa-lg"></i> Explorer </div>
